--- a/Footer Section/Challenge_1/style.css
+++ b/Footer Section/Challenge_1/style.css
@@ -16,6 +16,11 @@ h2 {
   font-weight: 900;
 }
 
+.super {
+  vertical-align: super;
+  font-size: 28px;
+}
+
 h4 {
   font-size: 25px;
   font-weight: 700;
