--- a/TableChallenges/Challenge_2/style.css
+++ b/TableChallenges/Challenge_2/style.css
@@ -1,26 +1,33 @@
 @import url("https://fonts.googleapis.com/css?family=Indie+Flower");
 
 * {
+  margin: 0;
+  padding: 0;
+  outline: 0;
   font-family: "Indie Flower";
-  color: #1b1b1b;
+  color: #000;
+}
+
+body {
+  margin: 0px 15px;
 }
 
 h1 {
-  margin: 10px 0 20px 15px;
+  margin-top: 10px;
+  margin-bottom: 15px;
   font-size: 35px;
 }
 
 hr {
-  height: 4px;
-  background-color: #1b1b1b;
+  height: 3px;
+  background-color: #000;
   border-radius: 5px;
-  margin: 0px 15px 15px 15px;
 }
 
 table {
+  margin-top: 15px;
   border: none;
-  border-spacing: 5px;
-  margin-left: 15px;
+  border-spacing: 4px;
 }
 
 th,
@@ -48,5 +55,5 @@ caption {
 }
 
 tr:nth-child(3) > td:last-child {
-  background-color: #5fb6db;
+  background-color: #8fb1cc;
 }
