--- a/ButtonChallenges/Challenge_1/style.css
+++ b/ButtonChallenges/Challenge_1/style.css
@@ -1,34 +1,34 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
 
-.container {
-  background-color: #6b91dd;
-  padding: 15px 25px;
-  display: inline-block;
-  border-radius: 5px;
-  position: relative;
-  margin: 40vh 45vw;
-}
-
-.container:hover {
-  background-color: #575757;
-}
-
-.container a {
-  text-decoration: none;
-}
-
-.container span {
-  color: #ffffff;
-  font-size: 20px;
+* {
   font-family: "Montserrat";
 }
 
+.container {
+  text-align: center;
+  margin-top: 270px;
+}
+
+a {
+  background-color: #2998f3;
+  padding: 18px 30px;
+  border-radius: 3px;
+  text-decoration: none;
+  position: relative;
+}
+
+a span {
+  color: #ffffff;
+  font-size: 20px;
+}
+
 .badge {
-  background-color: #575757;
+  background-color: #2b2b2b;
+  font-size: 17px;
   font-weight: 600;
   padding: 6px 11px;
   border-radius: 50%;
   position: absolute;
-  top: -16px;
-  right: -15px;
+  bottom: 37px;
+  right: -14px;
 }
