--- a/ButtonChallenges/Challenge_2/style.css
+++ b/ButtonChallenges/Challenge_2/style.css
@@ -5,21 +5,22 @@ body {
 }
 
 .div__btn {
-  margin: 45vh 43vw;
+  text-align: center;
+  margin-top: 280px;
 }
 
 .btn {
-  background-color: #1b1b1b;
+  background-color: transparent;
   color: #ffffff;
-  font-size: 22px;
   font-family: "Montserrat";
+  font-size: 20px;
   font-weight: 600;
   padding: 12px 20px;
-  border: 2.5px solid #ddd101;
-  border-radius: 15px;
+  border: 2.5px solid #f9f900;
+  border-radius: 10px;
 }
 
 .btn:hover {
-  box-shadow: 0 0 10px 5px #ddd101;
+  box-shadow: 0 0px 10px 4px #f9f900;
   cursor: pointer;
 }
