--- a/FormChallenges/Challenge_2/style.css
+++ b/FormChallenges/Challenge_2/style.css
@@ -4,81 +4,78 @@
   margin: 0;
   padding: 0;
   outline: 0;
+  color: #000;
 }
 
 body {
   height: 100vh;
-  background: linear-gradient(to right top, #2ae669 15%, #6b5ee1);
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  background: linear-gradient(to right top, #abfd32, #2092fb);
+  overflow: hidden;
 }
 
 .center {
-  height: 65vh;
-  width: 25vw;
-  border-radius: 15px;
+  width: 380px;
+  box-sizing: border-box;
+  margin: 110px auto 0px auto;
+  padding: 40px 35px;
+  border-radius: 12px;
   background-color: #ffffff;
 }
 
-.center .header {
-  margin: 35px 40px;
-}
-
-.center h1 {
+.header h1 {
   font-family: "Sansita Swashed";
-  font-size: 35px;
+  font-size: 30px;
+  letter-spacing: 1.5px;
 }
 
-.center h1::before {
+.header h1::before {
   content: "";
   display: inline-block;
-  width: 5px;
-  height: 70px;
+  width: 4px;
+  height: 50px;
   border-radius: 5px;
   background-color: #1b98f5;
   position: relative;
-  left: -12px;
-  top: 23px;
+  top: 15px;
+  margin-right: 12px;
 }
 
 .center form {
-  margin: 30px 30px;
+  margin-top: 30px;
 }
 
-form span {
+.inputbox span {
   display: none;
 }
 
 form input {
-  padding: 10px 15px;
-  margin: 22px 0;
+  margin-top: 40px;
   font-size: 18px;
   font-family: Arial;
+  border-radius: 10px;
 }
 
 input[type="text"] {
-  width: 85%;
-  color: #1b1b1b;
-  border: 2px solid #1b1b1b;
-  border-radius: 12px;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 12px 20px;
+  border: 2px solid #000;
 }
 
 ::placeholder {
-  color: #1b1b1b;
+  color: #000;
 }
 
 input[type="button"] {
-  width: 40%;
-  color: #ffffff;
-  font-weight: 600;
+  margin-bottom: 15px;
+  padding: 12px 30px;
+  background-color: #1d90ff;
+  color: #fff;
   border: none;
-  border-radius: 12px;
-  background-color: #1b98f5;
-  transition: box-shadow 300ms ease-in-out;
+  transition: background-color 250ms ease;
 }
 
 input[type="button"]:hover {
-  box-shadow: 0 0 30px 30px #1faa59 inset;
   cursor: pointer;
+  background-color: #0084ff;
 }
