--- a/NavbarChallenges/Challenge_1/style.css
+++ b/NavbarChallenges/Challenge_1/style.css
@@ -4,36 +4,32 @@
   margin: 0;
   padding: 0;
   outline: 0;
-}
-
-body {
-  min-height: 100vh;
-  background-color: #ebebeb;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-}
-
-nav {
-  width: 50%;
-  height: 70px;
-  border-radius: 20px;
-  background-color: #1b1b1b;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-evenly;
-}
-
-nav a {
-  color: #cdc6c6;
-  text-decoration: none;
-  font-size: 22px;
-  font-weight: 600;
   font-family: "Montserrat";
 }
 
-nav a:hover {
-  color: #50dbb4;
+body {
+  height: 100vh;
+  background-color: #f5f5f5;
+  overflow: hidden;
+  text-align: center;
+}
+
+nav {
+  margin: 260px auto 0px auto;
+  display: inline-block;
+  padding: 20px 25px;
+  border-radius: 18px;
+  background-color: #151b1f;
+}
+
+.nav-item {
+  margin: 0px 20px;
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: 600;
+  color: #cdc6c6;
+}
+
+.nav-item:hover {
+  color: #44ddb2;
 }
